@@ -1,8 +1,0 @@
-[Desktop Entry]
-Name=PySolFC
-GenericName=Solitaire Game
-Exec=pysol
-Icon=pysol.xpm
-Terminal=false
-Type=Application
-Categories=Game;CardGame;
